syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem) {}
  rpc readTodos(empty) returns (TodoItems) {}
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc readStream (empty) returns (stream TodoItem) {}
}

message empty {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}